# amai

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  compose.yaml
.cargo/: config.toml
brand/: README.md  amai_brand_spec.md
config/: benchmark_matrix.toml  client_targets.toml  cold_benchmark_lazy_order_proof.toml  cold_benchmark_manifest.toml  cold_benchmark_proof.toml  cold_benchmark_self_contained.toml  cold_repo_pool_seed.tsv  compatibility.toml  deployment_profiles.toml  deployment_targets.toml  external_benchmark_datasets.toml  external_benchmark_targets.toml  github_public_allowlist.txt  mcp_task_matrix.toml  memory_task_matrix.toml  observability.toml  red_team_retrieval_isolation.toml  retrieval_science.toml  token_budget_profiles.toml
docs/: AGENT_START_HERE.md  AMAI_COMPARE_EXPERIMENT_PLAN.md  AMAI_GLOBAL_MEMORY_ROADMAP.md  AMAI_SCIENTIFIC_MEMORY_ADOPTION_PLAN.md  AMAI_SYSTEM_OVERVIEW.md  AMAI_TASK_TREE_PLAN.md  ARCHITECTURE.md  AUDIT_MANUAL_VERDICT_2026-04-11.md  DEPLOYMENT_TARGETS.md  IMPLEMENTATION_GATES.md  IMPLEMENTATION_STATUS.md  MAINTAINABILITY_ENFORCEMENT.md  MCP_INTEGRATION.md  MEMORY_BENCH_RUNBOOK.md  OPERATIONS.md  REFERENCES.md  TOKEN_LEDGER.md
fixtures/: README.md  real_project_text_compare_cases.jsonl  text_compare_cases.jsonl  token_benchmark_queries.txt
scripts/: agent_preflight.sh  amai_exec.sh  amai_open.sh  amai_tray_menu.sh  benchmark_contamination_preflight.sh  benchmark_matrix.sh  bootstrap_stack.sh  chat_lookup.sh  cleanup_mcp_orphans.ps1  cleanup_mcp_orphans.sh  cleanup_proof_governance_artifacts.sh  (+282 more)
(+217 files in other folders)
