[package]
name = "art-memory-agent-index"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Art-memory-agent-index (Amai): Rust-first control plane for multi-project AI-agent continuity and retrieval"
readme = "README.md"

[[bin]]
name = "amai"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.46.0"
axum = "0.8.6"
aws-config = "1.8.10"
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.127.0"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
fastembed = "5.13.0"
hex = "0.4.3"
ignore = "0.4.25"
qdrant-client = "1.17.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7.16", features = ["with-serde_json-1", "with-uuid-1"] }
tiktoken-rs = "0.9.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
toml = "0.9.7"
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.24.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
